--- a/page/page.css
+++ b/page/page.css
@@ -352,4 +352,9 @@ input[type=text]:focus {
   opacity: .24;
 }
 
+#ml-feedback {
+    padding-left: 20px;
+    padding-bottom: 20px;
+}
+
 /* Kanban */
